--- a/brd-android/kyc/src/main/res/values/views.xml
+++ b/brd-android/kyc/src/main/res/values/views.xml
@@ -35,6 +35,7 @@
     </style>
 
     <style name="AccountVerification.CardView.BulletPoints" parent="">
+        <item name="android:paddingStart">4dp</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/fabriik_black</item>
     </style>
