--- a/brd-android/kyc/src/main/res/values/views.xml
+++ b/brd-android/kyc/src/main/res/values/views.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Common.Info" parent="">
+        <item name="android:drawableStart">@drawable/ic_info_blue</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/fabriik_black</item>
+    </style>
+
     <style name="AccountVerification.CardView" parent="">
         <item name="cardBackgroundColor">@color/white</item>
         <item name="cardCornerRadius">12dp</item>
