--- a/brd-android/kyc/src/main/res/layout/fragment_account_verification.xml
+++ b/brd-android/kyc/src/main/res/layout/fragment_account_verification.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true">
 
-        <include layout="@layout/partial_kyc_toolbar"/>
+        <include layout="@layout/partial_kyc_toolbar" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -22,9 +22,10 @@
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:paddingStart="16dp"
             android:paddingEnd="16dp">
 
@@ -33,21 +34,14 @@
                 style="@style/Common.Info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/AccountVerification.InfoText"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:text="@string/AccountVerification.InfoText" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cv_basic"
                 style="@style/AccountVerification.CardView.Border"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_info"
                 app:strokeColor="#F7AE14">
 
                 <LinearLayout
@@ -81,12 +75,9 @@
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cv_unlimited"
                 style="@style/AccountVerification.CardView.Border"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cv_basic"
                 app:strokeColor="#2C78FF">
 
                 <LinearLayout
@@ -155,6 +146,6 @@
                     </RelativeLayout>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
